Community menu fixes, auto jumplinks, escapable html.

--- a/jekyll-site-src/_sass/_base.scss
+++ b/jekyll-site-src/_sass/_base.scss
@@ -75,3 +75,9 @@ hr {
   padding: 0;
   border-bottom: 1px solid rgba(0,0,0,0.2);
 }
+
+strong,
+b {
+  font-weight: inherit;
+  color: $black;
+}
